# app/Http/Controllers/AuthController.php
@@ -11,6 +11,8 @@ use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Response as HttpResponse;
 use Illuminate\Support\Facades\Response;
 use OpenApi\Attributes as OAT;
+use Symfony\Component\HttpKernel\Exception\HttpException;
+use Symfony\Component\HttpKernel\Exception\NotFoundHttpException;
 
 class AuthController extends Controller
 {
@@ -60,5 +62,56 @@ class AuthController extends Controller
         UserSignedUp::dispatch($user);
 
         return Response::json(new LoggedInUserResource($user), HttpResponse::HTTP_CREATED);
+    }
+
+    /**
+     * Login a user.
+     *
+     * @param  LoginRequest  $request
+     * @return JsonResponse
+     *
+     * @throws HttpException
+     * @throws NotFoundHttpException
+     */
+    #[OAT\Post(
+        tags: ['Auth'],
+        path: '/login',
+        operationId: 'AuthController.login',
+        requestBody: new OAT\RequestBody(
+            required: true,
+            content: new OAT\JsonContent(ref: '#/components/schemas/LoginRequest')
+
+        ),
+        responses: [
+            new OAT\Response(
+                response: HttpResponse::HTTP_OK,
+                description: 'Ok',
+                content: new OAT\JsonContent(ref: '#/components/schemas/LoggedInUserResource')
+            ),
+            new OAT\Response(
+                response: HttpResponse::HTTP_UNPROCESSABLE_ENTITY,
+                description: 'Unprocessable entity',
+                content: new OAT\JsonContent(ref: '#/components/schemas/ValidationError')
+            ),
+            new OAT\Response(
+                response: HttpResponse::HTTP_UNAUTHORIZED,
+                description: 'Unauthorized',
+                content: new OAT\JsonContent(
+                    properties: [
+                        new OAT\Property(
+                            property: 'message',
+                            type: 'string',
+                            example: 'Invalid credentials.'
+                        ),
+                    ]
+                )
+            ),
+        ]
+    )]
+    public function login(LoginRequest $request): JsonResponse
+    {
+        $user = $this->authService->loginUser($request);
+
+        return Response::json(new LoggedInUserResource($user));
     }
 }
